[metadata]
name = wordle_bot
version = 0.0.1-dev
description = Package that implements a Wordle bot and tester.
author = Brenton Candelaria
author_email = brentoncandelaria@gmail.com
# What kind of license are you using? This uses a SPDX identifier (https://spdx.org/licenses/)
license = MIT
# The thing you put here is the name of the file in the same directory as the setup.cfg
license_file = LICENSE
# Where is the project
# url = https://github.com/pybel/pybel
# Where can people get your code
# download_url = https://github.com/pybel/pybel/releases
# You can put whatever key-values here you want, but these three are special
# project_urls =
#    Bug Tracker = https://github.com/pybel/pybel/issues
#    Source Code = https://github.com/pybel/pybel
#    Documentation = https://pybel.readthedocs.io

long_description = file: README.md
long_description_content_type = text/markdown

# classifiers =
#     Development Status :: 5 - Production/Stable
#     Environment :: Console
#     Intended Audience :: Developers
#     Intended Audience :: Science/Research
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent
#     Programming Language :: Python
#     Programming Language :: Python :: 3.8
#     Programming Language :: Python :: 3.7
#     Programming Language :: Python :: 3.6
#     Programming Language :: Python :: 3.5
#     Programming Language :: Python :: 3 :: Only
#     Topic :: Scientific/Engineering :: Bio-Informatics
#     Topic :: Scientific/Engineering :: Chemistry

keywords =
    Wordle
